NetBSD Problem Report #51984

From mlelstv@tazz.1st.de  Sun Feb 19 05:27:35 2017
Return-Path: <mlelstv@tazz.1st.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4CEBE7A2A9
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 19 Feb 2017 05:27:35 +0000 (UTC)
Message-Id: <20170218184930.C7FC426A13@tazz.1st.de>
Date: Sat, 18 Feb 2017 19:49:30 +0100 (CET)
From: mlelstv@serpens.de
Reply-To: mlelstv@serpens.de
To: gnats-bugs@NetBSD.org
Subject: tcpdump panics kernel for IEEE802_11
X-Send-Pr-Version: 3.95

>Number:         51984
>Category:       kern
>Synopsis:       tcpdump panics kernel for IEEE802_11
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Feb 19 05:30:00 +0000 2017
>Closed-Date:    Sun Aug 20 09:15:14 +0000 2017
>Last-Modified:  Sun Aug 20 09:15:14 +0000 2017
>Originator:     Michael van Elst
>Release:        NetBSD 7.99.59
>Organization:

>Environment:


System: NetBSD tazz 7.99.59 NetBSD 7.99.59 (TAZZ) #7: Sun Feb 12 16:14:14 CET 2017 mlelstv@gossam:/home/netbsd-current/obj.amd64/home/netbsd-current/src/sys/arch/amd64/compile/TAZZ amd64
Architecture: x86_64
Machine: amd64
>Description:
tcpdump -n -i iwn0 -y IEEE802_11

panics the system immediately with:

panic: kernel diagnostic assertion "new->ple_next == NULL" failed: file "/home/n
etbsd-current/src/sys/sys/pslist.h", line 118
fatal breakpoint trap in supervisor mode

Backtrace:

db{0}> breakpoint() at netbsd:breakpoint+0x5
vpanic() at netbsd:vpanic+0x140
ch_voltag_convert_in() at netbsd:ch_voltag_convert_in
bpf_attachd() at netbsd:bpf_attachd+0x16f
bpf_ioctl() at netbsd:bpf_ioctl+0x6e3
sys_ioctl() at netbsd:sys_ioctl+0x101
syscall() at netbsd:syscall+0x1e7
--- syscall (number 54) ---


>How-To-Repeat:
tcpdump -n -i iwn0 -y IEEE802_11

>Fix:


>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Mon, 20 Feb 2017 03:10:34 +0000
State-Changed-Why:
Fixed in -current. Could you try with latest -current?


From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51984 CVS commit: src/sys/net
Date: Mon, 20 Feb 2017 03:08:39 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Feb 20 03:08:38 UTC 2017

 Modified Files:
 	src/sys/net: bpf.c

 Log Message:
 Reinit a pslist entry before inserting it to a pslist again

 Fix PR kern/51984
 Tested by nonaka@


 To generate a diff of this commit:
 cvs rdiff -u -r1.215 -r1.216 src/sys/net/bpf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: mlelstv@NetBSD.org
State-Changed-When: Sun, 20 Aug 2017 09:15:14 +0000
State-Changed-Why:
Can't reproduce with -current anymore.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.