Reinit a pslist entry before inserting it to a pslist again

Fix PR kern/51984
Tested by nonaka@